testing/errors/subst1.a
	*=$1000
	;sub= we do not define sub at all
base?sub	nop	; -> "neither number nor string"
